# pronoun-proofer

./: .gitignore  .rsyncignore  Dockerfile  Makefile  README.md  bot.py  build-optimized.sh  pyproject.toml  requirements.txt  run_logs_extraction.sh
ansible/roles/code/tasks/: main.yml
ansible/roles/code/vars/: main.yml
ansible/roles/svc/tasks/: main.yml
coref/: inject_dataset_pronouns.py  llm_prompt.txt  neopronouns_dataset.conll  project.yml
coref/configs/: cluster.cfg  span.cfg
coref/scripts/: prep_span_data.py  preprocess.py
deprecated/: .dockerignore  Dockerfile
examples/: real_world_test.py  test_scenarios.json
processing/: llm.py  nlp.py  nlp_coref.py  nlp_spacy.py
src/: context.py  fine_tune_model.py  llm.py  logger.py  mentions.py  nlp.py  nlp_coref.py  nlp_spacy.py  notifier.py  parser.py  reader.py  setup.py  utils.py
tests/: test_logger.py  test_notifier.py  test_parser.py  test_reader.py  test_setup.py
train-model/: evaluate_model.py  fine_tune_model.py  generate_best_model.py  model_utils.py  test_hf_coref.py
train-model/training-data/: coref_training.json  neopronouns.json  original.json  they-them.json
