[project]
name = "pronoun-proofer"
version = "0.1.0"
description = "A Zulip bot that validates pronouns for any tagged user in a message"
authors = [
    {name = "Adrien Lynch",email = "me@adrienlynch.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
black = "^25.1.0"
zulip = "^0.9.0"
pytest = "^8.4.1"
spacy = "^3.7"
spacy-experimental = "^0.6.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
